<resources>
    <string name="app_name">Magisk</string>
    <string name="main_activity_title">Welcome To Magisk</string>
    <string name="zygisk">Zygisk</string>
    <string name="req_activity_notify_hint">Notify as toast when use su!</string>
    <string name="req_activity_su_warn">This access can do anything to your device! Be careful!</string>
    <string name="req_activity_allow">Accect this request!</string>
    <string name="req_activity_deny">Reject this request!</string>
    <string name="allow_for_forever">Allow for always!</string>
    <string name="allow_only_for_this_process">Allow only for this process!</string>
    <string name="allow_for">Allow for</string>
    <string name="minute">minute</string>
    <string name="app_icon">App icon</string>
    <string name="requested_for_su">Requested for superuser!</string>
    <string name="authorised">Authorised</string>
    <string name="rejected">Rejected</string>
    <string name="installed">Installed</string>
    <string name="ramdisk">Ramdisk</string>
    <string name="zygisk_is_enabled">Zygisk is enabled</string>
    <string name="zygisk_is_disabled">Zygisk is disabled</string>
</resources>