<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom">
    <LinearLayout
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="1"
            tools:background="#000000" />
    <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@color/colorSurface"
            android:orientation="vertical"
            android:gravity="bottom">
        <TextView
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/colorOnSurface"
                android:gravity="center_horizontal"
                android:text="@string/requested_for_su"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center_vertical"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:orientation="horizontal">
            <ImageView
                    android:id="@+id/app_icon_img"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:scaleType="fitCenter"
                    android:contentDescription="@string/app_icon"
                    tools:src="@drawable/req_btn_bg_enabled"/>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical">
                <TextView
                        android:id="@+id/app_name_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorOnSurface"
                        android:textSize="16sp"
                        android:gravity="center"
                        android:paddingEnd="60dp"
                        tools:text="Test app"/>
                <TextView
                        android:id="@+id/app_pkg_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorOnSurface"
                        android:textSize="12sp"
                        android:gravity="center"
                        android:paddingEnd="60dp"
                        tools:text="com.pkg.testapp"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="10dp"
                android:alpha="0.2"
                android:background="@color/colorOnSurface" />
        <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/noti_switch"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/req_activity_notify_hint"
                android:checked="true"
                android:enabled="false"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                tools:enabled="false" />
        <com.google.android.material.slider.Slider
                android:id="@+id/until_slider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                style="@style/Widget.Material3.Slider"
                android:contentDescription="@string/app_name"
                app:tickVisible="true"
                android:valueFrom="-1.0"
                android:value="0.0"
                android:valueTo="60.0"
                android:stepSize="1.0"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="12sp"
                android:textColor="@color/colorError"
                android:layout_marginBottom="4dp"
                android:text="@string/req_activity_su_warn" />
        <LinearLayout
                android:layout_height="90dp"
                android:layout_width="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="4dp"
                android:background="@drawable/req_btn_bg"
                android:id="@+id/deny"
                android:gravity="center"
                android:orientation="horizontal">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorOnPrimary"
                    android:textSize="16sp"
                    android:text="@string/req_activity_deny" />
        </LinearLayout>
        <LinearLayout
                android:layout_height="90dp"
                android:layout_width="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="4dp"
                android:background="@drawable/req_btn_bg"
                android:id="@+id/allow"
                android:gravity="center"
                android:orientation="horizontal">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorOnPrimary"
                    android:textSize="16sp"
                    android:text="@string/req_activity_allow" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>